Newer one without bugs this time
hopefully

--- a/OSGB Website/Concepts/OneshotGBWebsite.html
+++ b/OSGB Website/Concepts/OneshotGBWebsite.html
@@ -22,20 +22,24 @@
                         <BLOCKQUOTE>
                           <BLOCKQUOTE>
                             <BLOCKQUOTE>
-                              <P><FONT FACE="Bell MT"><IMG SRC="../../../../../../../Program%20Files/Adobe/PageMill%203.0/PageMill_Resources/Image1.gif"
-                              WIDTH="420" HEIGHT="125" ALIGN="BOTTOM" BORDER="0" NATURALSIZEFLAG="0"><HR ALIGN=LEFT><A
+                              <P><FONT FACE="Bell MT"><IMG SRC="../../../../../../../Program%20Files/Adobe/PageMill%203.0/PageMill_Resources/Image4.gif"
+                              WIDTH="423" HEIGHT="128" ALIGN="BOTTOM" BORDER="0" NATURALSIZEFLAG="3"><HR ALIGN=LEFT><A
                               HREF="https://github.com/guest3444307/OneshotGB"><INPUT SRC="Computer.gif"
                               WIDTH="44" HEIGHT="48" ALIGN="LEFT" BORDER="0" NATURALSIZEFLAG="3"
-                              TYPE="image"></A>GITHUB PAGE         Website Credits<IMG SRC="CDICON.gif"
-                              WIDTH="42" HEIGHT="46" ALIGN="BOTTOM" BORDER="0" NATURALSIZEFLAG="3"></FONT></P>
-                              <P><FONT FACE="Bell MT"><!--SELECTION--><!--/SELECTION--><IMG 
-                              SRC="Folders%20Filled.gif" WIDTH="40" HEIGHT="48" ALIGN="BOTTOM"
-                              BORDER="0" NATURALSIZEFLAG="3">DOWNLOADS Mediafire Archive<A
-                              HREF="https://www.mediafire.com/folder/7aj0bbm3vazms/ONESHOT_GB_DEMO"><IMG 
+                              TYPE="image"></A>GITHUB PAGE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Website
+                              Credits<A HREF="https://guest3444307.github.io/OSGB%20Website/Concepts/WebsiteCredits.html"><IMG 
+                              SRC="CDICON.gif" WIDTH="42" HEIGHT="46" ALIGN="BOTTOM" BORDER="0"
+                              NATURALSIZEFLAG="3"></A></FONT></P>
+                              <P><A HREF="https://github.com/guest3444307/OneshotGB/releases"><FONT
+                               FACE="Bell MT"><IMG SRC="Folders%20Filled.gif" WIDTH="40" HEIGHT="48"
+                              ALIGN="BOTTOM" BORDER="0" NATURALSIZEFLAG="3"></FONT></A><FONT
+                               FACE="Bell MT">DOWNLOADS &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mediafire
+                              Archive<A HREF="https://www.mediafire.com/folder/7aj0bbm3vazms/ONESHOT_GB_DEMO"><IMG 
                               SRC="TrashCanIcon.gif" WIDTH="42" HEIGHT="46" ALIGN="BOTTOM"
                               BORDER="0" NATURALSIZEFLAG="3"></A></FONT></P>
-                              <P><FONT FACE="Bell MT"><IMG SRC="TextDoc.gif" WIDTH="36" HEIGHT="44"
-                              ALIGN="BOTTOM" BORDER="0" NATURALSIZEFLAG="3">Readme</FONT></P>
+                              <P><A HREF="https://guest3444307.github.io/"><FONT FACE="Bell MT"><IMG 
+                              SRC="TextDoc.gif" WIDTH="36" HEIGHT="44" ALIGN="BOTTOM" BORDER="0"
+                              NATURALSIZEFLAG="3"></FONT></A><FONT FACE="Bell MT">Readme</FONT></P>
                               <P><FONT FACE="Bell MT"><IMG SRC="MenuOneshotGB.gif" WIDTH="427"
                               HEIGHT="16" ALIGN="MIDDLE" BORDER="0" NATURALSIZEFLAG="0"></FONT>
                             </BLOCKQUOTE>
