Fixed some not working images and link to website
title

--- a/OSGB Website/Concepts/OneshotGBWebsite.html
+++ b/OSGB Website/Concepts/OneshotGBWebsite.html
@@ -22,11 +22,11 @@
                         <BLOCKQUOTE>
                           <BLOCKQUOTE>
                             <BLOCKQUOTE>
-                              <P><FONT FACE="Bell MT"><IMG SRC="../../../../../../../Program%20Files/Adobe/PageMill%203.0/PageMill_Resources/Image4.gif"
-                              WIDTH="423" HEIGHT="128" ALIGN="BOTTOM" BORDER="0" NATURALSIZEFLAG="3"><HR ALIGN=LEFT><A
-                              HREF="https://github.com/guest3444307/OneshotGB"><INPUT SRC="Computer.gif"
-                              WIDTH="44" HEIGHT="48" ALIGN="LEFT" BORDER="0" NATURALSIZEFLAG="3"
-                              TYPE="image"></A>GITHUB PAGE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Website
+                              <P><FONT FACE="Bell MT"><IMG SRC="OneshotTitle.gif" WIDTH="423"
+                              HEIGHT="128" ALIGN="BOTTOM" BORDER="0" NATURALSIZEFLAG="3"><HR ALIGN=LEFT
+                              WIDTH="423"><A HREF="https://github.com/guest3444307/OneshotGB"><INPUT 
+                              SRC="Computer.gif" WIDTH="44" HEIGHT="48" ALIGN="LEFT" BORDER="0"
+                              NATURALSIZEFLAG="3" TYPE="image"></A>GITHUB PAGE &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Website
                               Credits<A HREF="https://guest3444307.github.io/OSGB%20Website/Concepts/WebsiteCredits.html"><IMG 
                               SRC="CDICON.gif" WIDTH="42" HEIGHT="46" ALIGN="BOTTOM" BORDER="0"
                               NATURALSIZEFLAG="3"></A></FONT></P>
